attempt to fix resize truncation

--- a/app/assets/stylesheets/courses.css
+++ b/app/assets/stylesheets/courses.css
@@ -36,6 +36,7 @@ course-description {
 }
 course-description.truncated{
     height: 38px;
+    height: calc(lineHeight);
     overflow: hidden;
 }
 show-hide-button {
